# esp32-prov

./: .clangd  .cproject  .project  CMakeLists.txt  README.md  a.ps1  sdkconfig-c3  sdkconfig-s3  sdkconfig.old  status.txt  uml.vsdx
http/: file_server.h  handlers.c  ws_client_handler.c
main/: CMakeLists.txt  file_server.c  handlers.c  handlers.h  hed.html  keep_alive.c  main.c  main.html  nvs_editor.c  nvs_editor.h  nvseditor.html  nvsop.c  nvsop.h  project_specific.h  readme.md  ws_client_handler.c  ws_client_handler.h
nvs_part/: .gitignore  devcfg.csv
ota-http/: main.html  nvs_editor.c  nvseditor.html  nvsop.c
